fix layout issues

--- a/src/layouts/page-layout.scss
+++ b/src/layouts/page-layout.scss
@@ -7,7 +7,7 @@ $knob-size: 1em;
 .page {
     position: relative;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     background-color: var(--bg-color);
     color: var(--text-color);
     padding: 20px;
