--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -20,7 +20,6 @@ body,
 #gatsby-focus-wrapper {
     margin: 0;
     padding: 0;
-    height: 100%;
 }
 
 *,
